--- a/category.html
+++ b/category.html
@@ -62,10 +62,10 @@
                     <ul class="nav text-uppercase justify-content-center">
                         <li class="nav-item"><a class="nav-link active" href="category.html">Sklep</a></li>
                         <li class="nav-item"><a class="nav-link" href="category.html">Body Positive</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#">#mamymoc</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#">Marka</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#">Salony</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#">Kontakt</a></li>
+                        <li class="nav-item"><a class="nav-link" href="category.html">#mamymoc</a></li>
+                        <li class="nav-item"><a class="nav-link" href="about.html">Marka</a></li>
+                        <li class="nav-item"><a class="nav-link" href="shops.html">Salony</a></li>
+                        <li class="nav-item"><a class="nav-link" href="contact.html">Kontakt</a></li>
                     </ul>
                 </div>
             </div>
@@ -251,27 +251,27 @@
                         <div class="col-12 col-sm-6 col-lg-3 py-3">
                             <h3 class="text-uppercase h6">Marka</h3>
                             <ul class="list-unstyled mb-0">
-                                <li><a class="text-white" href="#">O nas</a></li>
-                                <li><a class="text-white" href="#">Media</a></li>
-                                <li><a class="text-white" href="#">Kontakt</a></li>
+                                <li><a class="text-white" href="about.html">O nas</a></li>
+                                <li><a class="text-white" href="page.html">Media</a></li>
+                                <li><a class="text-white" href="contact.html">Kontakt</a></li>
                             </ul>
                         </div>
                         <div class="col-12 col-sm-6 col-lg-3 py-3">
                             <h3 class="text-uppercase h6">Obsługa klienta</h3>
                             <ul class="list-unstyled mb-0">
-                                <li><a class="text-white" href="#">Dostawa</a></li>
-                                <li><a class="text-white" href="#">Płatności</a></li>
-                                <li><a class="text-white" href="#">Wymiana</a></li>
-                                <li><a class="text-white" href="#">Zwrot</a></li>
-                                <li><a class="text-white" href="#">Reklamacja</a></li>
+                                <li><a class="text-white" href="page.html">Dostawa</a></li>
+                                <li><a class="text-white" href="page.html">Płatności</a></li>
+                                <li><a class="text-white" href="page.html">Wymiana</a></li>
+                                <li><a class="text-white" href="page.html">Zwrot</a></li>
+                                <li><a class="text-white" href="page.html">Reklamacja</a></li>
                             </ul>
                         </div>
                         <div class="col-12 col-sm-6 col-lg-3 py-3">
                             <h3 class="text-uppercase h6">Informacje</h3>
                             <ul class="list-unstyled mb-0">
-                                <li><a class="text-white" href="#">Regulamin</a></li>
-                                <li><a class="text-white" href="#">Polityka</a></li>
-                                <li><a class="text-white" href="#">Tabela rozmiarów</a></li>
+                                <li><a class="text-white" href="page.html">Regulamin</a></li>
+                                <li><a class="text-white" href="page.html">Polityka</a></li>
+                                <li><a class="text-white" href="page.html">Tabela rozmiarów</a></li>
                             </ul>
                         </div>
                         <div class="col-12 col-sm-6 col-lg-3 py-3">
