--- a/page.html
+++ b/page.html
@@ -80,114 +80,16 @@
             <div class="py-5">
                 <div class="container">
                     <div class="row">
-                        <div class="col-12 col-lg-6">
-                            <div class="row">
-                                <div class="col-12 col-md-9 order-1 order-md-2 py-3">
-                                    <div><img class="img-fluid w-100" src="assets/img/products/sukienka-clara.jpeg"></div>
-                                </div>
-                                <div class="col-12 col-md-3 order-2 order-md-1">
-                                    <div class="row">
-                                        <div class="col-4 col-md-12 py-3">
-                                            <div><img class="img-fluid w-100" src="assets/img/products/sukienka-clara.jpeg"></div>
-                                        </div>
-                                        <div class="col-4 col-md-12 py-3">
-                                            <div><img class="img-fluid w-100" src="assets/img/products/sukienka-clara.jpeg"></div>
-                                        </div>
-                                        <div class="col-4 col-md-12 py-3">
-                                            <div><img class="img-fluid w-100" src="assets/img/products/sukienka-clara.jpeg"></div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
+                        <div class="col-12 col-md-6 col-lg-4 py-3">
+                            <div><img class="img-fluid" src="assets/img/content/about.jpeg"></div>
                         </div>
-                        <div class="col-12 col-lg-6 py-3">
-                            <h2 class="text-uppercase">Sweter ZIBO Camel / Ecru</h2>
-                            <p>NR 150916E7FF<br></p>
-                            <p class="h2">339,00 ZŁ<br></p>
-                            <form>
-                                <div class="form-group">
-                                    <div class="d-flex align-items-center"><label class="mb-0 mr-3">Rozmiar</label>
-                                        <div class="dropdown"><button class="btn btn-outline-primary btn-sm dropdown-toggle text-uppercase px-3" aria-expanded="false" data-toggle="dropdown" type="button">S/M</button>
-                                            <div class="dropdown-menu"><a class="dropdown-item" href="#">First Item</a><a class="dropdown-item" href="#">Second Item</a><a class="dropdown-item" href="#">Third Item</a></div>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="form-group">
-                                    <div class="d-flex align-items-center"><button class="btn btn-primary text-uppercase py-2 px-4" type="button">Dodaj do koszyka</button></div>
-                                </div>
-                            </form>
-                            <p>Ten sweter skradnie twoje serca. W piękny zwierzęcy wzór, inspirowany umaszczeniem zebry. W kamelowo-ecru kolorze - rzuca się w oczy, dzięki artystycznie dobranemu kontrastowi. Fason delikatnie oversize, w którym każda sylwetka będzie się czuć swobodnie. Drapieżny, dodający charakteru. Idealnie komponuje się z naszymi spodniami i ribowanymi spódnicami.<br></p>
-                            <p>Szyte w Polsce<br></p>
-                            <ul class="list-unstyled">
-                                <li>Skład: 61% nylon 25% wiskoza 14% elastan</li>
-                                <li><a href="#">Tabela rozmiarów</a></li>
-                                <li>Wzrost modelki 177<br></li>
-                                <li>Modelka ma na sobie rozm. uniwersalny<br></li>
-                                <li>W naszym sklepie obowiązuje darmowa dostawa od 199 zł<br></li>
-                            </ul>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="py-5">
-                <div class="container">
-                    <h2>Inne produkty w tej kategorii</h2>
-                    <div class="row">
-                        <div class="col-12 col-sm-6 col-lg-3 py-3">
-                            <div class="card border-0">
-                                <div class="mb-3">
-                                    <div><img class="img-fluid w-100" src="assets/img/products/sukienka-clara.jpeg"></div>
-                                </div>
-                                <div class="card-body p-0">
-                                    <p class="text-uppercase text-center card-text mb-1"><a href="product.html">SUKIENKA CLARA</a></p>
-                                    <ul class="list-inline text-uppercase d-flex justify-content-center">
-                                        <li class="list-inline-item">209,00 zł</li>
-                                        <li class="list-inline-item"><span style="text-decoration: line-through;">369,00 zł</span></li>
-                                    </ul>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-12 col-sm-6 col-lg-3 py-3">
-                            <div class="card border-0">
-                                <div class="mb-3">
-                                    <div><img class="img-fluid w-100" src="assets/img/products/sukienka-clara.jpeg"></div>
-                                </div>
-                                <div class="card-body p-0">
-                                    <p class="text-uppercase text-center card-text mb-1"><a href="product.html">SUKIENKA CLARA</a></p>
-                                    <ul class="list-inline text-uppercase d-flex justify-content-center">
-                                        <li class="list-inline-item">209,00 zł</li>
-                                        <li class="list-inline-item"><span style="text-decoration: line-through;">369,00 zł</span></li>
-                                    </ul>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-12 col-sm-6 col-lg-3 py-3">
-                            <div class="card border-0">
-                                <div class="mb-3">
-                                    <div><img class="img-fluid w-100" src="assets/img/products/sukienka-clara.jpeg"></div>
-                                </div>
-                                <div class="card-body p-0">
-                                    <p class="text-uppercase text-center card-text mb-1"><a href="product.html">SUKIENKA CLARA</a></p>
-                                    <ul class="list-inline text-uppercase d-flex justify-content-center">
-                                        <li class="list-inline-item">209,00 zł</li>
-                                        <li class="list-inline-item"><span style="text-decoration: line-through;">369,00 zł</span></li>
-                                    </ul>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-12 col-sm-6 col-lg-3 py-3">
-                            <div class="card border-0">
-                                <div class="mb-3">
-                                    <div><img class="img-fluid w-100" src="assets/img/products/sukienka-clara.jpeg"></div>
-                                </div>
-                                <div class="card-body p-0">
-                                    <p class="text-uppercase text-center card-text mb-1"><a href="product.html">SUKIENKA CLARA</a></p>
-                                    <ul class="list-inline text-uppercase d-flex justify-content-center">
-                                        <li class="list-inline-item">209,00 zł</li>
-                                        <li class="list-inline-item"><span style="text-decoration: line-through;">369,00 zł</span></li>
-                                    </ul>
-                                </div>
-                            </div>
+                        <div class="col-12 col-md-6 col-lg-8 text-right py-3">
+                            <h3 class="text-uppercase h5 mb-5">Marka</h3>
+                            <p class="mb-4">&nbsp;Jesteśmy polską marką. Ubrania projektujemy w naszym&nbsp; biurze w Łodzi. Szyjemy je etycznie w lokalnych szwalniach.&nbsp; Tworzymy rzeczy głównie z polskich dzianin i tkanin&nbsp; pochodzących z Europy. Powstaliśmy w 2012 roku z chęci do&nbsp; robienia czegoś wyjątkowego i czystego w swych intencjach.&nbsp; Nasza marka narodziła się podczas rozmowy przyjaciółek -&nbsp; wspierających się i rozumiejących potrzeby kobiet silnych i&nbsp; nowoczesnych. Nazwa jest wyrazem kobiecego wsparcia. W&nbsp; wolnym tłumaczeniu oznacza „Ania chcę”, bo to właśnie Ania&nbsp; Banasiak, założycielka, miała marzenie, żeby stworzyć markę&nbsp;ponadczasową.<br></p>
+                            <h3 class="text-uppercase h6 mb-4">&nbsp;ANATAKA 2021<br></h3>
+                            <p class="font-weight-bolder mb-4">Wiosenno/letnia kolekcja Anataki to spełnienie niespełnionych obietnic o dalekich podróżach, zarówno tych w głąb siebie, ale i tych namacalnych. Tę kolekcję, stworzoną w wyjątkowych czasach, skierowaliśmy do kobiet świadomych, połączonych ze swoją kobiecością, dokładnie wiedzących czego chcą. Mówimy do tych, którym brakuje poczucia znanej normalności. Nasze ubrania będą Wam towarzyszyć w każdym przypływającym nowym doświadczeniu.<br></p>
+                            <p class="mb-4">&nbsp;Stonowane beże, delikatnie mieniące się złota i srebra, czysta, szlachetna biel, głęboka czerń i naturalne zielenie tworzą kolorystyczną bazę wiosenno/letnich linii. Materiały, z których powstały nasze ubrania są oddychające i wysokiej jakości - bawełny, wiskozy, lyocelle.<br></p>
+                            <p class="mb-4">Ubrania Anataki są tworzone przez kobiety dla kobiet.<br></p>
                         </div>
                     </div>
                 </div>
