--- a/shops.html
+++ b/shops.html
@@ -79,115 +79,27 @@
             </div>
             <div class="py-5">
                 <div class="container">
-                    <div class="row">
-                        <div class="col-12 col-lg-6">
-                            <div class="row">
-                                <div class="col-12 col-md-9 order-1 order-md-2 py-3">
-                                    <div><img class="img-fluid w-100" src="assets/img/products/sukienka-clara.jpeg"></div>
-                                </div>
-                                <div class="col-12 col-md-3 order-2 order-md-1">
-                                    <div class="row">
-                                        <div class="col-4 col-md-12 py-3">
-                                            <div><img class="img-fluid w-100" src="assets/img/products/sukienka-clara.jpeg"></div>
-                                        </div>
-                                        <div class="col-4 col-md-12 py-3">
-                                            <div><img class="img-fluid w-100" src="assets/img/products/sukienka-clara.jpeg"></div>
-                                        </div>
-                                        <div class="col-4 col-md-12 py-3">
-                                            <div><img class="img-fluid w-100" src="assets/img/products/sukienka-clara.jpeg"></div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
+                    <h1 class="text-uppercase text-center h2">Salony</h1>
+                    <div class="row mb-5">
+                        <div class="col-12 col-md-8 py-3">
+                            <div><img class="img-fluid w-100" src="assets/img/content/anataka-centrum-janki.jpeg"></div>
                         </div>
-                        <div class="col-12 col-lg-6 py-3">
-                            <h2 class="text-uppercase">Sweter ZIBO Camel / Ecru</h2>
-                            <p>NR 150916E7FF<br></p>
-                            <p class="h2">339,00 ZŁ<br></p>
-                            <form>
-                                <div class="form-group">
-                                    <div class="d-flex align-items-center"><label class="mb-0 mr-3">Rozmiar</label>
-                                        <div class="dropdown"><button class="btn btn-outline-primary btn-sm dropdown-toggle text-uppercase px-3" aria-expanded="false" data-toggle="dropdown" type="button">S/M</button>
-                                            <div class="dropdown-menu"><a class="dropdown-item" href="#">First Item</a><a class="dropdown-item" href="#">Second Item</a><a class="dropdown-item" href="#">Third Item</a></div>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="form-group">
-                                    <div class="d-flex align-items-center"><button class="btn btn-primary text-uppercase py-2 px-4" type="button">Dodaj do koszyka</button></div>
-                                </div>
-                            </form>
-                            <p>Ten sweter skradnie twoje serca. W piękny zwierzęcy wzór, inspirowany umaszczeniem zebry. W kamelowo-ecru kolorze - rzuca się w oczy, dzięki artystycznie dobranemu kontrastowi. Fason delikatnie oversize, w którym każda sylwetka będzie się czuć swobodnie. Drapieżny, dodający charakteru. Idealnie komponuje się z naszymi spodniami i ribowanymi spódnicami.<br></p>
-                            <p>Szyte w Polsce<br></p>
-                            <ul class="list-unstyled">
-                                <li>Skład: 61% nylon 25% wiskoza 14% elastan</li>
-                                <li><a href="#">Tabela rozmiarów</a></li>
-                                <li>Wzrost modelki 177<br></li>
-                                <li>Modelka ma na sobie rozm. uniwersalny<br></li>
-                                <li>W naszym sklepie obowiązuje darmowa dostawa od 199 zł<br></li>
-                            </ul>
+                        <div class="col-12 col-md-4 py-3 px-lg-5">
+                            <h3 class="h6 mb-1">Salon w Centrum Janki<br></h3>
+                            <p class="mb-5">ul. Mszczonowska 3<br>05-090 Janki<br></p>
+                            <p class="mb-5">Czynne:<br>Pn-SB: 9-21 Nd: 9-20</p>
+                            <p class="mb-0">tel: (+48) 665 300 454<br>janki@anataka.pl<br></p>
                         </div>
                     </div>
-                </div>
-            </div>
-            <div class="py-5">
-                <div class="container">
-                    <h2>Inne produkty w tej kategorii</h2>
-                    <div class="row">
-                        <div class="col-12 col-sm-6 col-lg-3 py-3">
-                            <div class="card border-0">
-                                <div class="mb-3">
-                                    <div><img class="img-fluid w-100" src="assets/img/products/sukienka-clara.jpeg"></div>
-                                </div>
-                                <div class="card-body p-0">
-                                    <p class="text-uppercase text-center card-text mb-1"><a href="product.html">SUKIENKA CLARA</a></p>
-                                    <ul class="list-inline text-uppercase d-flex justify-content-center">
-                                        <li class="list-inline-item">209,00 zł</li>
-                                        <li class="list-inline-item"><span style="text-decoration: line-through;">369,00 zł</span></li>
-                                    </ul>
-                                </div>
-                            </div>
+                    <div class="row mb-5">
+                        <div class="col-12 col-md-8 py-3">
+                            <div><img class="img-fluid w-100" src="assets/img/content/anataka-galeria-mlociny.jpeg"></div>
                         </div>
-                        <div class="col-12 col-sm-6 col-lg-3 py-3">
-                            <div class="card border-0">
-                                <div class="mb-3">
-                                    <div><img class="img-fluid w-100" src="assets/img/products/sukienka-clara.jpeg"></div>
-                                </div>
-                                <div class="card-body p-0">
-                                    <p class="text-uppercase text-center card-text mb-1"><a href="product.html">SUKIENKA CLARA</a></p>
-                                    <ul class="list-inline text-uppercase d-flex justify-content-center">
-                                        <li class="list-inline-item">209,00 zł</li>
-                                        <li class="list-inline-item"><span style="text-decoration: line-through;">369,00 zł</span></li>
-                                    </ul>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-12 col-sm-6 col-lg-3 py-3">
-                            <div class="card border-0">
-                                <div class="mb-3">
-                                    <div><img class="img-fluid w-100" src="assets/img/products/sukienka-clara.jpeg"></div>
-                                </div>
-                                <div class="card-body p-0">
-                                    <p class="text-uppercase text-center card-text mb-1"><a href="product.html">SUKIENKA CLARA</a></p>
-                                    <ul class="list-inline text-uppercase d-flex justify-content-center">
-                                        <li class="list-inline-item">209,00 zł</li>
-                                        <li class="list-inline-item"><span style="text-decoration: line-through;">369,00 zł</span></li>
-                                    </ul>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-12 col-sm-6 col-lg-3 py-3">
-                            <div class="card border-0">
-                                <div class="mb-3">
-                                    <div><img class="img-fluid w-100" src="assets/img/products/sukienka-clara.jpeg"></div>
-                                </div>
-                                <div class="card-body p-0">
-                                    <p class="text-uppercase text-center card-text mb-1"><a href="product.html">SUKIENKA CLARA</a></p>
-                                    <ul class="list-inline text-uppercase d-flex justify-content-center">
-                                        <li class="list-inline-item">209,00 zł</li>
-                                        <li class="list-inline-item"><span style="text-decoration: line-through;">369,00 zł</span></li>
-                                    </ul>
-                                </div>
-                            </div>
+                        <div class="col-12 col-md-4 py-3 px-lg-5">
+                            <h3 class="h6 mb-1">Salon w Galerii Młociny<br></h3>
+                            <p class="mb-5">ul. Zgrupowania AK "Kampinos"<br>01-943 Warszawa<br></p>
+                            <p class="mb-5">Czynne:<br>Pn-Pt: 10-22 Nd: 10-21</p>
+                            <p class="mb-0">tel: (+48) 665 700 933<br>mlociny@anataka.pl<br></p>
                         </div>
                     </div>
                 </div>
