--- a/about.html
+++ b/about.html
@@ -79,117 +79,12 @@
             </div>
             <div class="py-5">
                 <div class="container">
-                    <div class="row">
-                        <div class="col-12 col-lg-6">
-                            <div class="row">
-                                <div class="col-12 col-md-9 order-1 order-md-2 py-3">
-                                    <div><img class="img-fluid w-100" src="assets/img/products/sukienka-clara.jpeg"></div>
-                                </div>
-                                <div class="col-12 col-md-3 order-2 order-md-1">
-                                    <div class="row">
-                                        <div class="col-4 col-md-12 py-3">
-                                            <div><img class="img-fluid w-100" src="assets/img/products/sukienka-clara.jpeg"></div>
-                                        </div>
-                                        <div class="col-4 col-md-12 py-3">
-                                            <div><img class="img-fluid w-100" src="assets/img/products/sukienka-clara.jpeg"></div>
-                                        </div>
-                                        <div class="col-4 col-md-12 py-3">
-                                            <div><img class="img-fluid w-100" src="assets/img/products/sukienka-clara.jpeg"></div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-12 col-lg-6 py-3">
-                            <h2 class="text-uppercase">Sweter ZIBO Camel / Ecru</h2>
-                            <p>NR 150916E7FF<br></p>
-                            <p class="h2">339,00 ZŁ<br></p>
-                            <form>
-                                <div class="form-group">
-                                    <div class="d-flex align-items-center"><label class="mb-0 mr-3">Rozmiar</label>
-                                        <div class="dropdown"><button class="btn btn-outline-primary btn-sm dropdown-toggle text-uppercase px-3" aria-expanded="false" data-toggle="dropdown" type="button">S/M</button>
-                                            <div class="dropdown-menu"><a class="dropdown-item" href="#">First Item</a><a class="dropdown-item" href="#">Second Item</a><a class="dropdown-item" href="#">Third Item</a></div>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="form-group">
-                                    <div class="d-flex align-items-center"><button class="btn btn-primary text-uppercase py-2 px-4" type="button">Dodaj do koszyka</button></div>
-                                </div>
-                            </form>
-                            <p>Ten sweter skradnie twoje serca. W piękny zwierzęcy wzór, inspirowany umaszczeniem zebry. W kamelowo-ecru kolorze - rzuca się w oczy, dzięki artystycznie dobranemu kontrastowi. Fason delikatnie oversize, w którym każda sylwetka będzie się czuć swobodnie. Drapieżny, dodający charakteru. Idealnie komponuje się z naszymi spodniami i ribowanymi spódnicami.<br></p>
-                            <p>Szyte w Polsce<br></p>
-                            <ul class="list-unstyled">
-                                <li>Skład: 61% nylon 25% wiskoza 14% elastan</li>
-                                <li><a href="#">Tabela rozmiarów</a></li>
-                                <li>Wzrost modelki 177<br></li>
-                                <li>Modelka ma na sobie rozm. uniwersalny<br></li>
-                                <li>W naszym sklepie obowiązuje darmowa dostawa od 199 zł<br></li>
-                            </ul>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="py-5">
-                <div class="container">
-                    <h2>Inne produkty w tej kategorii</h2>
-                    <div class="row">
-                        <div class="col-12 col-sm-6 col-lg-3 py-3">
-                            <div class="card border-0">
-                                <div class="mb-3">
-                                    <div><img class="img-fluid w-100" src="assets/img/products/sukienka-clara.jpeg"></div>
-                                </div>
-                                <div class="card-body p-0">
-                                    <p class="text-uppercase text-center card-text mb-1"><a href="product.html">SUKIENKA CLARA</a></p>
-                                    <ul class="list-inline text-uppercase d-flex justify-content-center">
-                                        <li class="list-inline-item">209,00 zł</li>
-                                        <li class="list-inline-item"><span style="text-decoration: line-through;">369,00 zł</span></li>
-                                    </ul>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-12 col-sm-6 col-lg-3 py-3">
-                            <div class="card border-0">
-                                <div class="mb-3">
-                                    <div><img class="img-fluid w-100" src="assets/img/products/sukienka-clara.jpeg"></div>
-                                </div>
-                                <div class="card-body p-0">
-                                    <p class="text-uppercase text-center card-text mb-1"><a href="product.html">SUKIENKA CLARA</a></p>
-                                    <ul class="list-inline text-uppercase d-flex justify-content-center">
-                                        <li class="list-inline-item">209,00 zł</li>
-                                        <li class="list-inline-item"><span style="text-decoration: line-through;">369,00 zł</span></li>
-                                    </ul>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-12 col-sm-6 col-lg-3 py-3">
-                            <div class="card border-0">
-                                <div class="mb-3">
-                                    <div><img class="img-fluid w-100" src="assets/img/products/sukienka-clara.jpeg"></div>
-                                </div>
-                                <div class="card-body p-0">
-                                    <p class="text-uppercase text-center card-text mb-1"><a href="product.html">SUKIENKA CLARA</a></p>
-                                    <ul class="list-inline text-uppercase d-flex justify-content-center">
-                                        <li class="list-inline-item">209,00 zł</li>
-                                        <li class="list-inline-item"><span style="text-decoration: line-through;">369,00 zł</span></li>
-                                    </ul>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-12 col-sm-6 col-lg-3 py-3">
-                            <div class="card border-0">
-                                <div class="mb-3">
-                                    <div><img class="img-fluid w-100" src="assets/img/products/sukienka-clara.jpeg"></div>
-                                </div>
-                                <div class="card-body p-0">
-                                    <p class="text-uppercase text-center card-text mb-1"><a href="product.html">SUKIENKA CLARA</a></p>
-                                    <ul class="list-inline text-uppercase d-flex justify-content-center">
-                                        <li class="list-inline-item">209,00 zł</li>
-                                        <li class="list-inline-item"><span style="text-decoration: line-through;">369,00 zł</span></li>
-                                    </ul>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
+                    <h1 class="mb-4 h2">Content page</h1>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum tincidunt nulla eu erat tempor ultrices. Curabitur ullamcorper lectus diam, non congue nisl euismod et. Nulla auctor erat libero. Aliquam sagittis quam vel ligula sagittis, non ornare nulla laoreet. Nam ex libero, vehicula et dolor et, rutrum egestas turpis. Phasellus convallis quam ac nibh consequat pretium. Nullam molestie metus quis fringilla pellentesque. Pellentesque quis efficitur nibh, sed dignissim lorem. Mauris varius justo in diam consectetur posuere.<br></p>
+                    <p>In lacus sem, varius at finibus eget, porttitor eget ante. Mauris lacinia purus augue, et sollicitudin quam dapibus at. Sed sodales, arcu nec imperdiet malesuada, quam ante facilisis nulla, eu posuere turpis nulla ut mi. Quisque blandit laoreet sapien, cursus porttitor tellus mollis nec. Cras a ipsum tellus. In vitae tempus libero. Quisque rutrum vehicula dictum. Duis molestie justo nisl, sed consectetur velit sagittis id. Cras eget lacinia massa. Nunc tincidunt dignissim nunc, vitae rutrum elit dapibus id. Aliquam mattis ut erat quis maximus. Aenean est erat, lacinia sit amet orci eu, cursus tincidunt dolor. Etiam hendrerit luctus lectus vel mattis. Nunc in convallis sapien, eget posuere nibh. Proin metus mauris, fermentum sit amet commodo in, tincidunt eu lectus. Nulla dignissim fringilla fermentum.<br></p>
+                    <p>Donec eleifend sollicitudin velit vitae cursus. Sed feugiat rhoncus efficitur. Integer interdum pellentesque tortor nec fringilla. Praesent vitae luctus neque. Sed eget urna et tellus condimentum tempus id id turpis. Duis at magna id eros congue egestas in non risus. In hac habitasse platea dictumst. Donec tempus mauris felis, id laoreet velit ornare id. Nunc non rhoncus lectus. Proin quis hendrerit massa. Sed id dignissim ipsum, sit amet sollicitudin orci. Donec ac eros velit. Maecenas luctus lectus leo.<br></p>
+                    <p>Fusce dolor ex, cursus et ligula ac, hendrerit hendrerit leo. Quisque non bibendum lorem. Mauris dignissim scelerisque massa vel pulvinar. Aenean commodo tristique sapien vel accumsan. Proin pellentesque orci eu lacus faucibus, et bibendum velit pharetra. Aliquam ut aliquet nisl. Curabitur ultrices maximus aliquet. Donec iaculis sapien metus, in fermentum dolor fringilla vel. Pellentesque aliquet posuere porta. Duis ut erat magna. Sed bibendum malesuada nisl, sed pulvinar quam posuere sit amet. Proin sit amet sem ligula. Ut vel urna eget libero tincidunt volutpat. Sed varius massa eu metus pellentesque maximus.<br></p>
+                    <p>Suspendisse lacinia lorem a odio consectetur aliquam. Proin fringilla dolor et nisi pharetra semper. Fusce iaculis libero id velit sollicitudin, eget ultricies nisl elementum. Maecenas consequat lacus in pretium congue. In luctus venenatis porta. Cras ullamcorper tellus lacinia, commodo mi blandit, faucibus felis. Nullam convallis euismod efficitur.<br></p>
                 </div>
             </div>
         </main>
