--- a/contact.html
+++ b/contact.html
@@ -79,115 +79,42 @@
             </div>
             <div class="py-5">
                 <div class="container">
-                    <div class="row">
-                        <div class="col-12 col-lg-6">
-                            <div class="row">
-                                <div class="col-12 col-md-9 order-1 order-md-2 py-3">
-                                    <div><img class="img-fluid w-100" src="assets/img/products/sukienka-clara.jpeg"></div>
-                                </div>
-                                <div class="col-12 col-md-3 order-2 order-md-1">
-                                    <div class="row">
-                                        <div class="col-4 col-md-12 py-3">
-                                            <div><img class="img-fluid w-100" src="assets/img/products/sukienka-clara.jpeg"></div>
-                                        </div>
-                                        <div class="col-4 col-md-12 py-3">
-                                            <div><img class="img-fluid w-100" src="assets/img/products/sukienka-clara.jpeg"></div>
-                                        </div>
-                                        <div class="col-4 col-md-12 py-3">
-                                            <div><img class="img-fluid w-100" src="assets/img/products/sukienka-clara.jpeg"></div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
+                    <div class="row mb-5">
+                        <div class="col-12 col-lg-auto py-3">
+                            <div class="d-flex justify-content-center"><img class="img-fluid" src="assets/img/content/anataka_mandala.png" style="width: 356px;"></div>
                         </div>
-                        <div class="col-12 col-lg-6 py-3">
-                            <h2 class="text-uppercase">Sweter ZIBO Camel / Ecru</h2>
-                            <p>NR 150916E7FF<br></p>
-                            <p class="h2">339,00 ZŁ<br></p>
-                            <form>
-                                <div class="form-group">
-                                    <div class="d-flex align-items-center"><label class="mb-0 mr-3">Rozmiar</label>
-                                        <div class="dropdown"><button class="btn btn-outline-primary btn-sm dropdown-toggle text-uppercase px-3" aria-expanded="false" data-toggle="dropdown" type="button">S/M</button>
-                                            <div class="dropdown-menu"><a class="dropdown-item" href="#">First Item</a><a class="dropdown-item" href="#">Second Item</a><a class="dropdown-item" href="#">Third Item</a></div>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="form-group">
-                                    <div class="d-flex align-items-center"><button class="btn btn-primary text-uppercase py-2 px-4" type="button">Dodaj do koszyka</button></div>
-                                </div>
-                            </form>
-                            <p>Ten sweter skradnie twoje serca. W piękny zwierzęcy wzór, inspirowany umaszczeniem zebry. W kamelowo-ecru kolorze - rzuca się w oczy, dzięki artystycznie dobranemu kontrastowi. Fason delikatnie oversize, w którym każda sylwetka będzie się czuć swobodnie. Drapieżny, dodający charakteru. Idealnie komponuje się z naszymi spodniami i ribowanymi spódnicami.<br></p>
-                            <p>Szyte w Polsce<br></p>
-                            <ul class="list-unstyled">
-                                <li>Skład: 61% nylon 25% wiskoza 14% elastan</li>
-                                <li><a href="#">Tabela rozmiarów</a></li>
-                                <li>Wzrost modelki 177<br></li>
-                                <li>Modelka ma na sobie rozm. uniwersalny<br></li>
-                                <li>W naszym sklepie obowiązuje darmowa dostawa od 199 zł<br></li>
-                            </ul>
+                        <div class="col py-3 px-lg-5">
+                            <h2 class="text-uppercase mb-5">Kontakt</h2>
+                            <h6 class="mb-1"> Biuro Anataka</h6>
+                            <p class="mb-4">ul. Matejki 9<br>91-402 Łódź<br>&nbsp;tel: (+48) 42 244 00 10<br>&nbsp;mail: biuro@anataka.pl<br>&nbsp;Pn - Pt&nbsp;godz: 10 - 20</p>
+                            <h6 class="mb-1"> Sklep Internetowy</h6>
+                            <p class="mb-0">tel: (+48) 607600102<br>&nbsp;mail: anataka@anataka.pl<br>&nbsp;Pn - Pt&nbsp;godz: 10-18</p>
                         </div>
                     </div>
-                </div>
-            </div>
-            <div class="py-5">
-                <div class="container">
-                    <h2>Inne produkty w tej kategorii</h2>
                     <div class="row">
-                        <div class="col-12 col-sm-6 col-lg-3 py-3">
-                            <div class="card border-0">
-                                <div class="mb-3">
-                                    <div><img class="img-fluid w-100" src="assets/img/products/sukienka-clara.jpeg"></div>
-                                </div>
-                                <div class="card-body p-0">
-                                    <p class="text-uppercase text-center card-text mb-1"><a href="product.html">SUKIENKA CLARA</a></p>
-                                    <ul class="list-inline text-uppercase d-flex justify-content-center">
-                                        <li class="list-inline-item">209,00 zł</li>
-                                        <li class="list-inline-item"><span style="text-decoration: line-through;">369,00 zł</span></li>
-                                    </ul>
-                                </div>
-                            </div>
+                        <div class="col py-3">
+                            <h6 class="text-uppercase mb-4"> Anataka Sp. z o.o.</h6>
+                            <p class="mb-4">ul. Matejki 9<br>91-402 Łódź<br>NIP: 534-239-92-32<br>REGON: 141523941</p>
+                            <p class="mb-4">Sąd Rejonowy dla m. st. Warszawy, XIV Wydział Gospodarczy<br>KRS 0000321146<br>Kapitał zakładowy spółki: 50000 PLN</p>
+                            <p class="mb-4">Konto bankowe PLN: 13 1750 0009 0000 0000 2342 0511<br>w Banku BNP Paribas Bank Polska S.A.</p>
+                            <p class="mb-4">Konto bankowe EUR: PL89 1750 0009 0000 0000 2611 6422<br>SWIFT: PPABPLPKXXX<br>w Banku BNP Paribas Bank Polska S.A.</p>
+                            <p class="mb-0">Konto bankowe GBP: PL83 1750 0009 0000 0000 2891 2749<br>SWIFT: PPABPLPKXXX<br>w Banku BNP Paribas Bank Polska S.A.</p>
                         </div>
-                        <div class="col-12 col-sm-6 col-lg-3 py-3">
-                            <div class="card border-0">
-                                <div class="mb-3">
-                                    <div><img class="img-fluid w-100" src="assets/img/products/sukienka-clara.jpeg"></div>
+                        <div class="col py-3">
+                            <h6 class="text-uppercase mb-4"> Formularz kontaktowy</h6>
+                            <form>
+                                <div class="form-group"><input class="form-control form-control-lg" type="text" placeholder="Twój adres e-mail"></div>
+                                <div class="form-group"><select class="form-control form-control-lg">
+                                        <option value="12" selected="">Wybierz temat</option>
+                                        <option value="13">This is item 2</option>
+                                        <option value="14">This is item 3</option>
+                                    </select></div>
+                                <div class="form-group"><textarea class="form-control form-control-lg" placeholder="Wiadomość"></textarea></div>
+                                <div class="form-group">
+                                    <div class="custom-control custom-checkbox"><input class="custom-control-input" type="checkbox" id="formCheck-1"><label class="custom-control-label" for="formCheck-1"><small class="d-block">Wyrażam zgodę na przetwarzanie moich danych osobowych przez ANATAKA Sp. z o.o., pod adresem ul. Matejki 9, 91-402 Łódź, NIP: 5342399232, REGON: 141523941, w celu korzystania z prowadzonej przez anataka.pl usługi. Jestem świadomy/świadoma, iż moja zgoda może być odwołana w każdym czasie, więcej w Polityce Prywatności.Zapoznałem się z Polityką prywatności na temat zasad przetwarzania danych osobowych i ją akceptuję. (Więcej informacji)</small></label></div>
                                 </div>
-                                <div class="card-body p-0">
-                                    <p class="text-uppercase text-center card-text mb-1"><a href="product.html">SUKIENKA CLARA</a></p>
-                                    <ul class="list-inline text-uppercase d-flex justify-content-center">
-                                        <li class="list-inline-item">209,00 zł</li>
-                                        <li class="list-inline-item"><span style="text-decoration: line-through;">369,00 zł</span></li>
-                                    </ul>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-12 col-sm-6 col-lg-3 py-3">
-                            <div class="card border-0">
-                                <div class="mb-3">
-                                    <div><img class="img-fluid w-100" src="assets/img/products/sukienka-clara.jpeg"></div>
-                                </div>
-                                <div class="card-body p-0">
-                                    <p class="text-uppercase text-center card-text mb-1"><a href="product.html">SUKIENKA CLARA</a></p>
-                                    <ul class="list-inline text-uppercase d-flex justify-content-center">
-                                        <li class="list-inline-item">209,00 zł</li>
-                                        <li class="list-inline-item"><span style="text-decoration: line-through;">369,00 zł</span></li>
-                                    </ul>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-12 col-sm-6 col-lg-3 py-3">
-                            <div class="card border-0">
-                                <div class="mb-3">
-                                    <div><img class="img-fluid w-100" src="assets/img/products/sukienka-clara.jpeg"></div>
-                                </div>
-                                <div class="card-body p-0">
-                                    <p class="text-uppercase text-center card-text mb-1"><a href="product.html">SUKIENKA CLARA</a></p>
-                                    <ul class="list-inline text-uppercase d-flex justify-content-center">
-                                        <li class="list-inline-item">209,00 zł</li>
-                                        <li class="list-inline-item"><span style="text-decoration: line-through;">369,00 zł</span></li>
-                                    </ul>
-                                </div>
-                            </div>
+                                <div class="form-group d-flex justify-content-end mb-0"><button class="btn btn-primary text-uppercase py-2 px-4" type="button">Wyślij</button></div>
+                            </form>
                         </div>
                     </div>
                 </div>
